--- a/Header.css
+++ b/Header.css
@@ -23,15 +23,12 @@ a, a:active, a:focus {
     outline: none;
 }
 header{
-    /* max-width:98%; */
     width: 100%;
     margin: 0 auto; 
-    /* border: yellow 1px solid; */
     padding-inline: var(--inlinePaddingDesktop);
     position: relative;
 }
 .navBar-Container{
-    max-width:90%;
     margin: 0 auto;
     height: 7.5rem;
     /* border-bottom: blue 2px solid; */
